--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ build/
 opencv-master/
 opencv.zip
 main
+f
+f.cpp
 
 # Created by https://www.toptal.com/developers/gitignore/api/cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake
