--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( main main.cpp )
 target_link_libraries( main ${OpenCV_LIBS} )
-add_executable( f f.cpp )
-target_link_libraries( f ${OpenCV_LIBS} )
+add_executable( docscan docscan.cpp )
+target_link_libraries( docscan ${OpenCV_LIBS} )
