--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ main
 f
 f.cpp
 examplepic/
+docscan
 
 # Created by https://www.toptal.com/developers/gitignore/api/cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake
