--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ f
 f.cpp
 examplepic/
 docscan
+findedge
 
 # Created by https://www.toptal.com/developers/gitignore/api/cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake
