--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ f.cpp
 examplepic/
 docscan
 findedge
+imagesizetranform
 
 # Created by https://www.toptal.com/developers/gitignore/api/cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake
