--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ docscan
 findedge
 imagesizetranform
 
+tesseract
+tesseract_build
+leptonicasrc
+leptonica_build
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=cmake
 
